ex04->ex02 new subj fix

--- a/todo
+++ b/todo
@@ -3,7 +3,7 @@ old
 01	deleted
 02	-> 00
 03	-> 01
-04
+04	-> 02
 05
 06
 07
@@ -12,8 +12,8 @@ old
 
 new
 00	done
-01	WIP
-02
+01	done
+02	done
 03
 04
 05
