add makefile (ex00-ex02), delete ex05, ex06->ex03

--- a/todo
+++ b/todo
@@ -4,8 +4,8 @@ old
 02	-> 00
 03	-> 01
 04	-> 02
-05
-06
+05	deleted
+06	-> 03
 07
 
 
@@ -14,7 +14,7 @@ new
 00	done
 01	done
 02	done
-03
+03	WIP
 04
 05
 06
